update tour
