# 01_Backend/app/Http/Controllers/Api/StatisticalController.php
@@ -1,0 +1,66 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use App\Constants\ResponseCodeConstant;
+use App\Repositories\Statistical\IStatisticalRepository;
+
+class StatisticalController extends Controller
+{
+    protected $statisticalRepository;
+
+    public function __construct(IStatisticalRepository $statisticalRepository)
+    {
+        $this->statisticalRepository = $statisticalRepository;
+    }
+
+    /**
+     * init data for statistics by revenue
+     *  @OA\GET(
+     *      path="/statistical",
+     *      tags={"Statistical"},
+     *      security={{"apiAuth":{}}},
+     *      description="
+     *      Code
+     *          200 - Success
+     *          400 - Bad request
+     *          401 - Not authentication
+     *          403 - Not access
+     *          422 - Input invalidate
+     *          423 - Have other error
+     *          500 - Server error
+     *      ",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Result of success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="Code", type="integer", example="200"),
+     *              @OA\Property(
+     *                  property="Data",
+     *                  description="Result of success"
+     *              )
+     *          )
+     *      )
+     *  )
+     */
+    public function index()
+    {
+        $response = response()->json([]);
+        try {
+            $data_res = $this->statisticalRepository->initDataRevenue();
+            $response = response()->json([
+                'Code'         => ResponseCodeConstant::OK,
+                'Data'         => $data_res,
+                'MessageNo'    => "",
+                'Message'      => "",
+                'DataErrors'   => []
+            ]);
+        }
+        catch (\Exception $e) {
+            //
+        }
+        return $response;
+    }
+}
