# 02_Frontend/src/views/admin/dashboard/repository.js
@@ -1,1 +1,9 @@
-export default {};
+import repository from '@/utils/repository';
+
+const resourceStatistical = '/statistical';
+
+export default {
+    getDataInit: () => {
+        return repository.get(`${resourceStatistical}`);
+    }
+};
